--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
     <main>
         <nav>
-
+            <div class="shape_square">
+                <div class="first_square"></div>
+                <div class="second_square"></div>
+            </div>
+            <div class="shape_line"></div>
+            <div class="shape_ellipse"></div>
+            <div class="shape_rectangle"></div>
         </nav>
     </main>
 </body>
