--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
         <nav>
             <div class="shape_square">
                 <div class="first_square"></div>
+                <div class="shape_line">
+                    <div class="first_line"></div>
+                    <div class="second_line"></div>
+                </div>
                 <div class="second_square"></div>
             </div>
-            <div class="shape_line"></div>
+
             <div class="shape_ellipse"></div>
             <div class="shape_rectangle"></div>
         </nav>
