--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
                     <div class="first_line"></div>
                     <div class="second_line"></div>
                 </div>
+                <div class="shape_ellipse">
+                    <div class="ellipse"></div>
+                </div>
                 <div class="second_square"></div>
             </div>
-
-            <div class="shape_ellipse"></div>
-            <div class="shape_rectangle"></div>
+            <div class="shape_rectangle">
+                <div class="rectangle"></div>
+            </div>
         </nav>
     </main>
 </body>
