--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
                 <div class="shape_ellipse">
                     <div class="ellipse"></div>
                 </div>
+                <div class="shape_rectangle">
+                    <div class="rectangle"><p>ABC</p></div>
+                </div>
                 <div class="second_square"></div>
             </div>
-            <div class="shape_rectangle">
-                <div class="rectangle"></div>
-            </div>
+
         </nav>
     </main>
 </body>
