Ustawianie odpowiedniej rozdzielczosci dla figur

--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
-    <title>Zadanie rekrutacyjne </title>
-</head>
-<body>
-    <main>
-        <nav>
-            <div class="shape_square">
-                <div class="first_square"></div>
-                <div class="shape_line">
-                    <div class="first_line"></div>
-                    <div class="second_line"></div>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css"/>
+        <title>Zadanie rekrutacyjne | Filip Kwiatek</title>
+    </head>
+    <body>
+        <nav class="nav"></nav>
+        <div class="container clearfix">
+            <section class="holder holder--smallerFigures">
+                <div class="holder__squares">
+                    <div class="square square--lower"></div>
+                    <div class="square square--upper"></div>
                 </div>
-                <div class="shape_ellipse">
-                    <div class="ellipse"></div>
+                <div class="holder__figures clearfix">
+                    <div class="holder__lines">
+                        <div class="line line--upper"></div>
+                        <div class="line line--lower"></div>
+                    </div>
+                    <div class="ellipse"></div>     
                 </div>
-                <div class="shape_rectangle">
-                    <div class="rectangle"><p>ABC</p></div>
-                </div>
-                <div class="second_square"></div>
-            </div>
-
-        </nav>
-    </main>
-</body>
+            </section>
+            <aside class="holder holder--sidebar">
+                <p>ABC</p>
+            </aside>
+        </div>
+    </body>
 </html>
